# nifcloud-sdk-python

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  cliff.toml  compose.yaml  pyproject.toml
.github/: dependabot.yml
.github/workflows/: acceptance-tests.yml  publish-to-pypi.yml  unit-tests.yml
docs/source/: conf.py  index.rst
nifcloud/: __init__.py  auth.py  configprovider.py  credentials.py  loaders.py  parsers.py  serialize.py  session.py
nifcloud/data/computing/3.0/: service-2.json
nifcloud/data/devops-runner/v1/: service-2.json
nifcloud/data/devops/v1/: service-2.json
nifcloud/data/dns/2012-12-12N2013-12-16/: service-2.json
nifcloud/data/ess/2010-12-01N2014-05-28/: service-2.json
nifcloud/data/nas/N2016-02-24/: service-2.json
nifcloud/data/rdb/2013-05-15N2013-12-16/: service-2.json
nifcloud/data/service-activity/2020-11-25/: service-2.json
nifcloud/data/storage/2006-03-01/: service-2.json
nifcloud/docs/: __init__.py
tests/acceptance/minimal/: test_computing_minimal.py  test_rdb_minimal.py  test_storage_minimal.py
tests/unit/: nifcloud_test.py  test_auth.py  test_parsers.py  test_serialize_computing.py  test_serialize_dns.py  test_serialize_ess.py  test_serialize_nas.py  test_serialize_rdb.py  test_session.py
